--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@ nav{
 }
 
 #showcase{
-    background-image: url(../img/theater-image-background.png);
+    background-image: url("../img/theater-image-background.png");
     width: 100%;
     height: 700px;
     color: white;
